<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView1" android:text="@string/welcomMsg"></TextView>
    <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/email" android:id="@+id/email">
        <requestFocus></requestFocus>
    </EditText>
    <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:inputType="textPersonName" android:text="@string/fullname" android:id="@+id/fulname"></EditText>
    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView2" android:text="@string/noteMsg"></TextView>
    <RelativeLayout android:id="@+id/relativeLayout1" android:layout_width="match_parent" android:layout_height="wrap_content">
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:layout_marginRight="52dp" android:id="@+id/register" android:text="@string/register"></Button>
    </RelativeLayout>
    <TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:text="@string/blank" android:id="@+id/result"></TextView>
    <RelativeLayout android:id="@+id/relativeLayout2" android:layout_width="match_parent" android:layout_height="match_parent">
        <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:layout_marginRight="52dp" android:layout_marginTop="38dp" android:id="@+id/closeBtn" android:text="@string/cancel"></Button>
    </RelativeLayout>
    
</LinearLayout>
