<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent" android:weightSum="1">
    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/pinInfo" android:text="TextView" android:layout_weight="0.28"></TextView>
    <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/linearLayout1" android:weightSum="1" android:layout_weight="0.14">
        <TextView android:id="@+id/textView1" android:text="@string/frndsMsg" android:layout_width="225dp" android:layout_weight="0.66" android:layout_height="match_parent"></TextView>
        <Button android:text="Friends" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/frndsBtn"></Button>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/linearLayout2" android:layout_weight="0.10">
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView2" android:text="@string/rateMsg"></TextView>
        <Button android:text="Rate" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/rateBtn"></Button>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/linearLayout3" android:weightSum="1" android:layout_weight="0.18">
        <TextView android:id="@+id/textView3" android:text="@string/suggestMsg" android:layout_width="187dp" android:layout_height="58dp"></TextView>
        <Button android:text="Suggestions" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/suggestBtn"></Button>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/linearLayout4" android:orientation="vertical">
        <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/shareMsg" android:id="@+id/thought">
            <requestFocus></requestFocus>
        </EditText>
    </LinearLayout>
    <RelativeLayout android:id="@+id/relativeLayout1" android:layout_height="wrap_content" android:layout_width="match_parent">
        <Button android:text="Share" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:layout_marginRight="20dp" android:id="@+id/shareBtn"></Button>
    </RelativeLayout>
    <LinearLayout android:layout_width="match_parent" android:id="@+id/linearLayout5" android:layout_height="wrap_content">
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView4" android:text="@string/accMsg"></TextView>
        <Button android:text="Account" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/accntBtn"></Button>
    </LinearLayout>
    
</LinearLayout>
